# trumi

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yaml
assets/timecode_sync/: index.html  qrcodeborder.js  style.css
diffusion_policy/common/: replay_buffer.py
docs/: conf.py  data_collection.rst  dataset_generation.rst  gopro_setup.rst  hardware_setup.rst  index.rst  overview.rst  software_setup.rst  specifications.rst
docs/_static/: tr_style.css
example/calibration/: gopro13_intrinsics_2_7k.json
scripts/: calibrate_gripper_range.py  calibrate_slam_tag.py  dataset_generation_pipeline.py  detect_aruco.py  serve_timecode_sync.py  visualize_aruco_video.py  visualize_trajectory.py
scripts/scripts_slam_pipeline/: 00_process_videos.py  01_extract_gopro_imu.py  02_create_map.py  03_batch_slam.py  04_detect_aruco.py  05_run_calibrations.py  06_generate_dataset_plan.py  07_generate_mcap_dataset.py  07_generate_replay_buffer.py  07_generate_zarr_dataset.py
scripts_slam_pipeline/: 00_process_videos.py  01_extract_gopro_imu.py
src/trumi/codecs/: imagecodecs_numcodecs.py
src/trumi/utils/: cv_util.py  interpolation_util.py  pose_util.py  timecode_util.py
utils/common/: timecode_util.py
